--- a/overlays/apac/kustomization.yaml
+++ b/overlays/apac/kustomization.yaml
@@ -1,3 +1,8 @@
 kind: Kustomization
 
 nmaeSuffix: -apac
+
+images:
+  - name: mysql
+    newName: registry.redhat.io/rhel8/mysql-80
+    newTag: 1-152
