updated apac apps

--- a/overlays/apac/kustomization.yaml
+++ b/overlays/apac/kustomization.yaml
@@ -2,6 +2,9 @@ kind: Kustomization
 
 nameSuffix: -apac
 
+bases:
+- ../../base
+
 images:
   - name: mysql
     newName: registry.redhat.io/rhel8/mysql-80
